@@ -9,6 +9,7 @@ Sigla:
 
 0.9.4 - released 2008-09-29
 
++ Added auto-detected link to a plugin's settings page. Checks for existence of settings() function in plugin's controller (issue 32)
 + Added Indonesian translation
 + Added "View this page" link in the Edit page screen
 + Added "Tag to use this snippet" in the Snippets tab
